--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -52,7 +52,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kfit/4fc9ac02-0470-498f-a291-b908d03d60e6'>Fave - Site Reliability Engineer (Infrastructure)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kfit/4fc9ac02-0470-498f-a291-b908d03d60e6'>Fave - Site Reliability Engineer (Infrastructure)</a></h5> 
 <p><span class="badge badge-light">Kuala Lumpur</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -135,7 +135,7 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/quizlet-2/2b95e966-8076-43c9-bfdc-403613fe6a66'>Quizlet - Site Reliability Engineer - Denver, CO</a></h5> 
+<h5><a href='https://jobs.lever.co/quizlet-2/2b95e966-8076-43c9-bfdc-403613fe6a66'>Quizlet - Site Reliability Engineer - Denver, CO</a></h5> 
 <p><span class="badge badge-light">Denver Denver Denver</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -159,7 +159,7 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light">London London London London</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opentextats.avature.net/careers/JobDetail/Southfield-Michigan-United-States-Site-Reliability-Engineer/24947'>Site Reliability Engineer - US, MI, Southfield - 24947</a></h5> 
+<h5><a href='https://opentextats.avature.net/careers/JobDetail/Southfield-Michigan-United-States-Site-Reliability-Engineer/24947'>Site Reliability Engineer - US, MI, Southfield - 24947</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -241,7 +241,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='http://insightengines.applytojob.com/apply/MjehfIgIdM/Site-Reliability-Engineer'>Site Reliability Engineer - Insight Engines - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://insightengines.applytojob.com/apply/MjehfIgIdM/Site-Reliability-Engineer'>Site Reliability Engineer - Insight Engines - Career Page</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -261,7 +261,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/blameless/2c3e30e3-8e9b-4c5a-af48-ef7c927b5e93'>Blameless - Senior Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/blameless/2c3e30e3-8e9b-4c5a-af48-ef7c927b5e93'>Blameless - Senior Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -277,7 +277,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/capsulecares/jobs/4054275002'>Job Application for Senior/Staff Site Reliability Engineer at Capsule</a></h5> 
+<h5><a href='https://boards.greenhouse.io/capsulecares/jobs/4054275002'>Job Application for Senior/Staff Site Reliability Engineer at Capsule</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -345,7 +345,7 @@ Identity?...</p>
 <p><span class="badge badge-light">Barcelona,</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/onesignal/1825dfda-35f3-4faa-be75-07b97a3a3afd'>OneSignal - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/onesignal/1825dfda-35f3-4faa-be75-07b97a3a3afd'>OneSignal - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -357,7 +357,7 @@ Identity?...</p>
 <p><span class="badge badge-light">Barcelona,</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://oneinamil.workable.com/j/407855BB2E'>OneinaMil - Jobs: Remote Site Reliability Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oneinamil.workable.com/j/407855BB2E'>OneinaMil - Jobs: Remote Site Reliability Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -369,7 +369,7 @@ Identity?...</p>
 <p><span class="badge badge-light">Vilnius</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://careers-incomm.icims.com/jobs/9109/site-reliability-engineer---japan/job'>Site Reliability Engineer - Japan in Tokyo, Tokyo | Careers at InComm</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-incomm.icims.com/jobs/9109/site-reliability-engineer---japan/job'>Site Reliability Engineer - Japan in Tokyo, Tokyo | Careers at InComm</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 1, 2019 ... InComm is now hiring a Site Reliability Engineer - Japan in Tokyo, Tokyo. 
 Review all of the job details and apply today!</p>
